Implementação de funcionalidades lado cliente
